Thu Dec  5 22:18:01 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (configuration): strip destdir part from prefix to get
	  rid of duplication.  a patch by arton at [ruby-core:58859].
	  [ruby-core:58856] [Bug #9213]

Thu Dec  5 21:53:29 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_or): lhs elements are prefered, so should not
	  replace with rhs elements.

	* test/ruby/test_array.rb (test_OR_in_order): import the test failed
	  by r43969 from rubyspec/core/array/union_spec.rb.

Thu Dec  5 21:05:42 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_info_decode): fix to avoid syntax error on VS2012.

Thu Dec  5 19:35:35 2013  Martin Duerst <duerst@it.aoyama.ac.jp>

	* st.c: tweaked comment

Thu Dec  5 19:21:10 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (struct rb_objspace): rename internal last_collection_flags to
	  latest_gc_info
	* gc.c (gc_latest_collection_info): add GC.latest_gc_info() with similar
	  behavior to GC.stat()
	* gc.c (rb_gc_latest_gc_info): new c-api for above
	* gc.c (gc_stat_internal): remove :last_collection_flags from GC.stat
	* gc.c (gc_profile_decode_flags): remove GC::Profiler.decode_flags
	* include/ruby/intern.h (rb_gc_latest_gc_info): export new c-api
	* test/ruby/test_gc.rb (class TestGc): test for new behavior
	* NEWS: note about new api

	* gc.c (gc_stat_internal): raise TypeError on wrong type
	* gc.c (gc_stat): fix error message

Thu Dec  5 18:18:08 2013  Aman Gupta <ruby@tmm1.net>

	* ext/objspace/gc_hook.c: remove this file
	* ext/-test-/tracepoint/gc_hook.c: new filename for above
	* ext/objspace/objspace.c: remove ObjectSpace.after_gc_start_hook=
	* test/objspace/test_objspace.rb: remove test
	* test/-ext-/tracepoint/test_tracepoint.rb: add above test for
	  tracepoint re-entry

Thu Dec  5 17:44:53 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: change function names vm_ prefix to objspace_ prefix.
	  They are objspace_ functionality.

Thu Dec  5 16:11:04 2013  Aman Gupta <ruby@tmm1.net>
